<?xml version="1.0"?>
<package>
  <name>tools_rviz</name>
  <version>0.0.0</version>
  <description>The tools_rviz package</description>

  <maintainer email="smyrno@todo.todo">smyrno</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
